[metadata]
name = solax-x3-rs485
version = 0.0.1
author = Johan van der Slikke
author_email = johan@vdslikke.net
description = A library to read information from your Solax X3 solar inverter through its RS485 port
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jvdslikke/py-solax-x3-rs485
project_urls =
    Bug Tracker = https://github.com/jvdslikke/py-solax-x3-rs485/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Home Automation
    Topic :: Software Development :: Libraries :: Python Modules
install_requires = ['pymodbus']

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src