[metadata]
name = solax-x3-rs485
version = 0.0.2
author = Johan van der Slikke
author_email = johan@vdslikke.net
description = A library to read information from your Solax X3 solar inverter through its RS485 port
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jvdslikke/py-solax-x3-rs485
project_urls =
    Bug Tracker = https://github.com/jvdslikke/py-solax-x3-rs485/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Home Automation
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = 
    solaxx3rs485
python_requires = >=3.6
install_requires = 
    pymodbus
